fixed navbar align

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -40,7 +40,7 @@ body {
     display: flex;
     flex-grow: 1;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     flex-wrap: wrap;
 
     a {
